--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
   <p>This is some text to click</p>
+  <h1>This is some more text to click.</h1>
 
   <img src="https://s3.amazonaws.com/after-school-assets/minion-tongue.jpg">
 
